Table users {
  id bigint [pk, increment]
  name varchar
  email varchar [not null, unique]
  password varchar
  role varchar
}

Table vouchers {
  id bigint [pk, increment]
  code varchar(50) [not null, unique]
  description varchar
  discount double
  expiry_date date
  max_usage int
  current_usage int
  active boolean
  created_by bigint [not null, ref: > users.id]
}

Table gift_cards {
  id bigint [pk, increment]
  code varchar [not null, unique]
  amount double
  balance double
  expiry_date date
  active boolean
  created_by bigint [ref: > users.id]
}

Table redemptions {
  id bigint [pk, increment]
  user_id bigint [not null, ref: > users.id]
  voucher_id bigint [not null, ref: > vouchers.id]
  redeemed_at datetime
  status varchar
  indexes {
    (user_id, voucher_id) [unique]
  }
}

Table gift_card_redemptions {
  id bigint [pk, increment]
  gift_card_id bigint [not null, ref: > gift_cards.id]
  user_id bigint [not null, ref: > users.id]
  amount double
  redeemed_at datetime
}
